feat!: rename package to @ayhid/strapi-provider-email-brevo
BREAKING CHANGE: Package renamed to scoped package @ayhid/strapi-provider-email-brevo
to avoid confusion with the existing strapi-provider-email-brevo package (Strapi v4).

This package is specifically for Strapi v5.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-provider-email-brevo",
+  "name": "@ayhid/strapi-provider-email-brevo",
   "version": "0.0.0-development",
   "description": "Brevo (Sendinblue) email provider for Strapi v5 using Transactional Email API",
   "main": "index.js",
