--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,17 +4,17 @@ on:
   push:
     branches:
       - main
-
 permissions:
-  contents: write
-  issues: write
-  pull-requests: write
-  id-token: write
-
+  contents: read 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write 
+      issues: write 
+      pull-requests: write
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: "lts/*"
 
       - name: Install dependencies
         run: npm install
