--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,23 +3,23 @@
     "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "noEmit": false,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "jsx": "react-jsx",
+    "noEmit": false
   },
-  "include": ["src/**/*"],
+  "include": [
+    "common/**/*",
+    "server/src/**/*",
+    "admin/src/**/*"
+  ],
   "exclude": ["node_modules", "dist"]
 }
